complete production stride

--- a/app.json
+++ b/app.json
@@ -1,17 +1,19 @@
 {
   "expo": {
-    "name": "stride",
+    "name": "Stride",
     "slug": "stride",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -19,12 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro",
+      "description": "Stride - Professional Step Counter & Stride Analyzer",
+      "themeColor": "#00F296",
+      "display": "standalone",
+      "shortName": "Stride",
+      "backgroundColor": "#FFFFFF",
+      "lang": "en"
     }
   }
 }
