--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo export"
+    "build": "npx expo export -p web"
   },
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.4.3",
